--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -17,6 +17,16 @@
         <li class="nav-item">
           <a class="nav-link" href="{{"/posts" | relative_url }}">Posts</a>
         </li>
+	<li class="nav-item">
+	  <ul>
+	    <li class="nav-item">
+              <a class="nav-link" href="{{"/posts" | relative_url }}">Posts</a>
+            </li>
+	    <li class="nav-item">
+              <a class="nav-link" href="{{"/posts" | relative_url }}">Posts</a>
+            </li>
+	  </ul>
+	</li>
         <li class="nav-item">
           <a class="nav-link" href="{{"/contact" | relative_url }}">Contact</a>
         </li>
